# sandbox-quant

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  README.md  TESTING.md
.github/: pull_request_template.md
.github/workflows/: auto-version-release.yml  gemini-pr.yml  hourly-market-catalog-pr.yml  periodic-maintenance.yml
config/: default.toml
data/: demo_market_registry.csv
docs/: gui-button-verification.md  gui-charting-status.md  hourly-market-catalog.md  release-plan-1.0.0.md  releasing.md  target-size-analysis.md
docs-site/: book.toml
docs-site/src/: SUMMARY.md  index.md  release-plan.md  rfc-0001.md  rfc-0002.md  rfc-0003.md  rfc-0045.md  rfc-0047.md
docs/assets/: cargo-run-output.txt
docs/issues/: alpaca-option-chain-not-visible.md
docs/rfcs/: 0001-multi-strategy-one-risk-module-en.md  0002-risk-module-visualization.md  0003-ui-transition-to-multi-asset-multi-strategy-en.md  0003-ui-transition-to-multi-asset-multi-strategy.md  0005-strategy-lifecycle-metrics-en.md  0005-strategy-lifecycle-metrics.md  0007-concurrent-multi-strategy-enable.md  0009-portfolio-grid-risk-visibility-en.md  0013-grid-network-tab-and-latency-observability-en.md  0014-ui-docs-automation-with-rust-bin-and-action-scenarios-en.md  0014-ui-docs-automation-with-rust-bin-and-action-scenarios.md  0015-readme-information-architecture-rework-en.md  0015-readme-information-architecture-rework.md  0021-strategy-expansion-first-roadmap.md  0022-strategy-creation-lifecycle-and-governance.md  0031-execution-vs-strategy-metric-separation-for-ev-stop.md  0032-position-ledger-by-order-and-strategy.md  0033-close-all-progress-and-confirmation-ux.md  0038-y-price-model-split-spot-futures-ev.md  0042-online-predictor-evaluation-and-live-quality-metrics.md  0045-alpha-portfolio-execution-manage-architecture.md  0046-regime-aware-alpha-portfolio-sizing.md  0047-alpha-portfolio-backtest-and-data-safety.md  0056-v1-reset-exchange-truth-architecture.md  0057-liquidation-breakdown-strategy-watch-mvp.md  0058-recorder-foreground-terminal-semantics.md  0059-recorder-single-owner-runtime.md  0060-binance-public-data-collector.md
docs/strategy/: README.md  _template.md  aroon-trend.md  atr-expansion.md  bollinger-reversion.md  channel-breakout.md  ema-crossover.md  ma-crossover.md  rsa.md  stochastic-reversion.md
docs/ui/: INDEX.md
ops/: backfill-postgres.sh  backtest-postgres-sweep.sh  run-runtime.sh  runtime.yaml
ops/grafana/: README.md  docker-compose.yml  loki-config.yaml  promtail-config.yaml
scripts/: fetch_backtest_bars.sh  hourly_market_update.sh  validate_market_catalog.sh
src/: app_helpers.rs  config.rs  doctor.rs  error.rs  event.rs  input.rs  lib.rs  main.rs  order_manager.rs  order_store.rs  risk_module.rs  strategy_catalog.rs  strategy_session.rs  strategy_stats.rs  ui_docs.rs  ui_handlers.rs
src/alpaca/: rest.rs
src/app/: bootstrap.rs  cli.rs  commands.rs  mod.rs  output.rs  runtime.rs  shell.rs
src/backtest/: mod.rs
src/backtest_app/: export.rs  mod.rs  runner.rs  snapshot.rs  terminal.rs
src/binance/: mod.rs  rest.rs  types.rs  ws.rs
src/charting/: egui.rs  inspect.rs  mod.rs  plotters.rs  render.rs  scene.rs  style.rs
src/collector_app/: binance_public.rs  mod.rs
src/command/: backtest.rs  mod.rs  operator.rs  recorder.rs
src/dataset/: query.rs  schema.rs  types.rs
src/domain/: balance.rs  exposure.rs  identifiers.rs  market.rs  mod.rs  order.rs  order_type.rs  position.rs
src/error/: app_error.rs  exchange_error.rs  execution_error.rs  mod.rs  storage_error.rs  strategy_error.rs  sync_error.rs  ui_error.rs
src/ev/: estimator.rs  forward.rs  mod.rs  price_model.rs  types.rs  y_model.rs
src/exchange/: facade.rs  fake.rs  mod.rs  types.rs
src/execution/: close_all.rs  close_symbol.rs  command.rs  mod.rs  planner.rs  price_source.rs  service.rs  target_translation.rs
src/gui/: app.rs
src/indicator/: ema.rs  mod.rs  sma.rs
src/lifecycle/: engine.rs  exit_orchestrator.rs  mod.rs
src/market_data/: binance_kline_backfill.rs  mod.rs  price_store.rs  service.rs
src/model/: candle.rs  mod.rs  order.rs  position.rs  signal.rs  tick.rs
src/observability/: logging.rs
src/portfolio/: mod.rs  reconcile.rs  snapshot.rs  staleness.rs  store.rs  sync.rs
src/predictor/: mod.rs
src/record/: coordination.rs  manager.rs  mod.rs
src/recorder_app/: mod.rs  runtime.rs  terminal.rs
src/runtime/: alpha_portfolio.rs  mod.rs  (+14 more)
tests/: app_runtime_tests.rs  app_state_v2_tests.rs  aroon_trend_tests.rs  atr_expansion_tests.rs  auth_error_integration_tests.rs  backtest_tests.rs  binance_adapter_tests.rs  binance_http_transport_tests.rs  binance_live_integration_tests.rs  bollinger_reversion_tests.rs  bootstrap_tests.rs  channel_breakout_tests.rs  cli_command_tests.rs  cli_output_tests.rs  config_credentials_sanitize_tests.rs  config_tests.rs  core_types_tests.rs  doctor_cli_tests.rs  donchian_trend_tests.rs  ema_crossover_tests.rs  ema_tests.rs  ensemble_vote_tests.rs  ev_estimator_tests.rs  ev_price_model_tests.rs  ev_y_model_tests.rs  exit_orchestrator_tests.rs  gui_charting_tests.rs  input_command_tests.rs  ma_crossover_tests.rs  ma_reversion_tests.rs  macd_crossover_tests.rs  multi_runtime_validation_tests.rs  network_metrics_tests.rs  opening_range_breakout_tests.rs  order_manager_risk_limits_tests.rs  order_store_tests.rs  position_ledger_tests.rs  position_lifecycle_engine_tests.rs  position_tests.rs  predictor_models_tests.rs  (+29 more)
(+244 files in other folders)
