[package]
name = "sandbox-quant"
version = "0.15.0"
edition = "2021"
description = "Terminal-based multi-strategy crypto trading sandbox with centralized risk controls"
repository = "https://github.com/sehyunsix/sandbox-quant"
readme = "README.md"
documentation = "https://docs.rs/sandbox-quant"
keywords = ["trading", "binance", "terminal", "risk", "quant"]
categories = ["command-line-utilities", "finance"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
rustls = { version = "0.23", features = ["ring"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
# Keep debug info for this crate, but avoid full symbols for all dependencies.
# This significantly reduces target/debug size during iterative development.
debug = 1

[profile.dev.package."*"]
debug = 0

[profile.test]
debug = 1

[profile.test.package."*"]
debug = 0
