[package]
name = "sandbox-quant"
version = "1.0.11"
edition = "2021"
description = "Integrated trading project for collector, recorder, backtest, GUI, and execution services"
repository = "https://github.com/sehyunsix/sandbox-quant"
readme = "README.md"
keywords = ["trading", "binance", "exchange", "cli", "futures"]
categories = ["command-line-utilities", "finance"]
license = "MIT"
publish = false
exclude = [
    "archive/**",
    "docs/archive/**",
    "config/**",
    ".github/**",
]

[features]
default = []
gui = ["dep:eframe", "dep:plotters"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
rustls = { version = "0.23", features = ["ring"] }
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
duckdb = { version = "1.1.1", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
eframe = { version = "0.31", optional = true }
plotters = { version = "0.3.7", optional = true, default-features = false, features = ["bitmap_backend", "chrono", "candlestick", "ttf", "line_series"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "sandbox-quant-gui"
path = "src/bin/sandbox-quant-gui.rs"
required-features = ["gui"]

[profile.dev]
# Keep debug info for this crate, but avoid full symbols for all dependencies.
# This significantly reduces target/debug size during iterative development.
debug = 1

[profile.dev.package."*"]
debug = 0

[profile.test]
debug = 1

[profile.test.package."*"]
debug = 0
